// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree: basic & disabled children & default check children 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="tree"
                  data-role="form-item"
                >
                  <label
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          Tree
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TreeControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Tree"
                    >
                      <ul
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-list"
                      >
                        <li
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item"
                          style="--Tree-depth: 0;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                            >
                              <icon-mock
                                class="icon icon-down-arrow-bold"
                                icon="down-arrow-bold"
                              />
                            </div>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemIcon __AMIS_COMPONENT_CLASS_PREFIX__Tree-folderIcon"
                              >
                                <icon-mock
                                  class="icon icon-folder"
                                  icon="folder"
                                />
                              </i>
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="Folder A"
                              >
                                Folder A
                              </span>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                          style="--Tree-depth: 1;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemIcon __AMIS_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file A"
                              >
                                file A
                              </span>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item is-child"
                          style="--Tree-depth: 1;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                            >
                              <icon-mock
                                class="icon icon-down-arrow-bold"
                                icon="down-arrow-bold"
                              />
                            </div>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemIcon __AMIS_COMPONENT_CLASS_PREFIX__Tree-folderIcon"
                              >
                                <icon-mock
                                  class="icon icon-folder"
                                  icon="folder"
                                />
                              </i>
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="Folder B"
                              >
                                Folder B
                              </span>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                          style="--Tree-depth: 2;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemIcon __AMIS_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file b1"
                              >
                                file b1
                              </span>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                          style="--Tree-depth: 2;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemIcon __AMIS_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file b2"
                              >
                                file b2
                              </span>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf"
                          style="--Tree-depth: 0;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemIcon __AMIS_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file C"
                              >
                                file C
                              </span>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf"
                          style="--Tree-depth: 0;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemIcon __AMIS_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file D"
                              >
                                file D
                              </span>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree: showOutline 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="tree"
                  data-role="form-item"
                >
                  <label
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          Tree
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TreeControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Tree __AMIS_COMPONENT_CLASS_PREFIX__Tree--outline"
                    >
                      <ul
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-list"
                      >
                        <li
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item"
                          style="--Tree-depth: 0;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                            >
                              <icon-mock
                                class="icon icon-down-arrow-bold"
                                icon="down-arrow-bold"
                              />
                            </div>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemIcon __AMIS_COMPONENT_CLASS_PREFIX__Tree-folderIcon"
                              >
                                <icon-mock
                                  class="icon icon-folder"
                                  icon="folder"
                                />
                              </i>
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="Folder A"
                              >
                                Folder A
                              </span>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                          style="--Tree-depth: 1;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemIcon __AMIS_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file A"
                              >
                                file A
                              </span>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item is-child"
                          style="--Tree-depth: 1;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                            >
                              <icon-mock
                                class="icon icon-down-arrow-bold"
                                icon="down-arrow-bold"
                              />
                            </div>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemIcon __AMIS_COMPONENT_CLASS_PREFIX__Tree-folderIcon"
                              >
                                <icon-mock
                                  class="icon icon-folder"
                                  icon="folder"
                                />
                              </i>
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="Folder B"
                              >
                                Folder B
                              </span>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                          style="--Tree-depth: 2;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemIcon __AMIS_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file b1"
                              >
                                file b1
                              </span>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                          style="--Tree-depth: 2;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemIcon __AMIS_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file b2"
                              >
                                file b2
                              </span>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf"
                          style="--Tree-depth: 0;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemIcon __AMIS_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file C"
                              >
                                file C
                              </span>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf"
                          style="--Tree-depth: 0;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemIcon __AMIS_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file D"
                              >
                                file D
                              </span>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
